--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-VITE_CART_APP_URL_API = "http://localhost:3000"
+# VITE_CART_APP_URL_API = "http://localhost:3000"
+VITE_CART_APP_URL_API = "https://a0d8-2806-10a6-6-79f2-2495-3d1f-e59c-d443.ngrok-free.app"
