NEW FEATURE: render all products in adminDashboard and implement a funcitonal delte Button

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-VITE_CART_APP_URL_API = "http://localhost:3000"
-# VITE_CART_APP_URL_API = "https://a0d8-2806-10a6-6-79f2-2495-3d1f-e59c-d443.ngrok-free.app"
+# VITE_CART_APP_URL_API = "http://localhost:3000"
+VITE_CART_APP_URL_API = "https://0b1a-2806-10a6-24-c4a2-5c83-edf7-4c3a-727c.ngrok-free.app"
