--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 # VITE_CART_APP_URL_API = "http://localhost:3000"
-VITE_CART_APP_URL_API = "https://0b1a-2806-10a6-24-c4a2-5c83-edf7-4c3a-727c.ngrok-free.app"
+VITE_CART_APP_URL_API = "https://c35c-2806-10a6-24-c4a2-dd5a-d14d-7fe6-54d9.ngrok-free.app"
+# VITE_CART_APP_URL_API = "https://0b1a-2806-10a6-24-c4a2-5c83-edf7-4c3a-727c.ngrok-free.app"
